# pytextual

./: README.md  pyproject.toml
pytui/: app.py  test.py
pytui/styles/: styles.tcss
