[tool.poetry]
name = "pytui"
version = "0.2.0"
description = "Simple daily log application"
authors = ["mxblsdl <maxblasdel@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
log = "pytui.app:run"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.38.1"
textual-dev = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
